# dayby

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/lib/: app_lock.dart  auth.dart  config.dart  format.dart  google.dart  intent_bridge.dart  lang.dart  live.dart  (+6 more)
server/: Dockerfile  pyproject.toml
server/app/: __init__.py  care.py  config.py  context.py  db.py  deps.py  lang.py  main.py  passwords.py  photos.py  query.py  ratelimit.py  tokens.py  util.py
server/app/models/: auth.py  events.py  family.py  message.py  routine.py
server/app/providers/: __init__.py
server/app/providers/auth/: __init__.py  base.py  google.py  mock.py
server/app/providers/llm/: base.py  gemini.py  mock.py  openai_compatible.py  prompt.py
server/app/providers/stt/: base.py  gemini.py  mock.py
server/app/providers/tts/: base.py  gemini.py  mock.py
server/app/routers/: assistant.py  auth.py  events.py  families.py  ingest.py  insights.py  live.py  messages.py  photos.py  reminders.py  routines.py  stats.py  tts.py  wrapped.py
server/scripts/: seed.py
server/tests/: conftest.py  test_assistant.py  test_auth.py  test_caregivers.py  test_conversation.py  test_edit_delete.py  test_events.py  test_families.py  test_gemini.py  test_health.py  test_ingest_text.py  test_ingest_voice.py  test_insights.py  test_languages.py  test_live.py  test_messages.py  test_photos.py  test_query.py  test_ratelimit.py  test_reminders.py  test_routines.py  test_sleep.py  test_stats.py  test_two_parents.py  test_wrapped.py
(+68 files in other folders)
