[project]
name = "dayby-server"
version = "0.1.0"
description = "Dayby backend: voice-first baby-care logging API (FastAPI + MongoDB + LLM)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pymongo>=4.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=1.0",
    # Multipart form parsing, for photo upload.
    "python-multipart>=0.0.9",
    # Session tokens. (Verifying Google ID tokens rides on google-auth, which
    # google-genai already brings in.)
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
